# rust-for-study

./: .gitignore  AUTO_SYNC.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  FEATURES.md  FREERTOS_CONFIG.md  FREERTOS_CONSTANTS.md  INSTALL.md  OSAL_CONTRACT.md  PROJECT_REPORT.txt  QUICK_START_CONFIG.md  README.md  TESTING.md  build.rs  build_examples.sh  wrapper.h
.cargo/: config.toml
.github/workflows/: ci.yml
cmake/: FreeRTOS.cmake
doc/: backend-alignment-gaps-zh.md  backend-alignment-gaps.md  demo-zh.md  event_group_trait_fixes.md  freertos-posix-alignment-gaps-zh.md  freertos-posix-alignment-gaps.md  osal-contact-zh.md  osal-contact.md  osal-contract-zh.md  osal-contract.md  test-architecture-zh.md  test-architecture.md
examples/: basic.rs  freertos_config.rs  posix_pthread_test.rs  posix_ticks_test.rs  producer_consumer.rs  simple_config.rs  test_priorities.rs
freertos_posix/: event_posix.c  freertos_config_wrapper.c
include/: FreeRTOSConfig.h
osal-rs/: Cargo.toml  LICENSE  build.rs
osal-rs-build/: Cargo.toml  README.md
osal-rs-build/src/: lib.rs
osal-rs-examples/: Cargo.toml
osal-rs-examples/src/freertos/: duration_tests.rs  event_group_tests.rs  mod.rs  mutex_tests.rs  queue_tests.rs  semaphore_tests.rs  system_tests.rs  thread_tests.rs  timer_tests.rs
osal-rs-ffi-freertos/: CMakeLists.txt
osal-rs-ffi-freertos/inc/: osal_rs_ffi_freertos.h
osal-rs-ffi-freertos/src/: osal_rs_ffi_freertos.c
osal-rs-porting/freeretos/inc/: osal_rs_freertos.h
osal-rs-porting/freeretos/src/: osal_rs_freertos.c
osal-rs-porting/freertos/inc/: osal_rs_freertos.h
osal-rs-porting/freertos/src/: osal_rs_freertos.c
osal-rs-serde/: Cargo.toml  README.md  SUMMARY.md  USAGE.md
osal-rs-serde/derive/: Cargo.toml  LICENSE  README.md
osal-rs-serde/derive/src/: lib.rs
osal-rs-serde/examples/: arrays_tuples.rs  basic.rs  binary_serialization.rs  custom_serializer.rs  integration.rs  nested_structs.rs  optional_fields.rs  robot_control.rs  with_derive.rs
osal-rs-serde/src/: de.rs  error.rs  lib.rs  ser.rs
osal-rs-serde/tests/: integration_tests.rs
osal-rs-tests/: Cargo.toml  README.md
osal-rs-tests/src/: lib.rs
osal-rs-tests/src/api/: event_group_tests.rs  mod.rs  mutex_tests.rs  queue_tests.rs  semaphore_tests.rs  thread_tests.rs  timer_tests.rs
osal-rs-tests/src/common/: api_surface.rs  duration_tests.rs  event_group_tests.rs  helpers.rs  mod.rs  mutex_tests.rs  semaphore_tests.rs  system_tests.rs  thread_tests.rs  timer_tests.rs
osal-rs-tests/src/coverage/: event_group_edge_tests.rs  mod.rs  queue_edge_tests.rs  resource_lifecycle_tests.rs  semaphore_edge_tests.rs  timeout_edge_tests.rs
osal-rs-tests/src/freertos/: api_surface.rs  duration_tests.rs  event_group_tests.rs  mod.rs  mutex_tests.rs  queue_tests.rs  semaphore_tests.rs  system_tests.rs  thread_tests.rs  timer_tests.rs
osal-rs-tests/src/legacy/: linux_legacy_extended_tests.rs  mod.rs
osal-rs-tests/src/linux/: duration_tests.rs  event_group_tests.rs  mod.rs  mutex_tests.rs  queue_tests.rs  semaphore_tests.rs  system_tests.rs  thread_tests.rs  timer_tests.rs
osal-rs-tests/src/port/: freertos_smoke_tests.rs  linux_legacy_smoke_tests.rs  mod.rs  posix_smoke_tests.rs
osal-rs-tests/src/posix/: mod.rs
osal-rs-tests/src/unit/: mod.rs  utils_tests.rs
osal-rs/examples/: portable_osal_integration_demo.rs  typed_message_queue_demo.rs
osal-rs/src/: freertos.rs  freertos_demo_export.rs  lib.rs  linux.rs  log.rs  posix.rs  traits.rs  utils.rs
osal-rs/src/freertos/: allocator.rs  config.rs  duration.rs  event_group.rs  ffi.rs  free_rtos_allocator.rs  mutex.rs  queue.rs  semaphore.rs  system.rs  thread.rs  tick.rs  timer.rs  types.rs
osal-rs/src/linux/: config.rs  duration.rs  event_group.rs  mutex.rs  queue.rs  semaphore.rs  system.rs  thread.rs  timer.rs  types.rs
osal-rs/src/posix/: allocator.rs  config.rs  duration.rs  event_group.rs  ffi.rs  mutex.rs  posix_allocator.rs  queue.rs  semaphore.rs  system.rs  thread.rs  timer.rs  types.rs
osal-rs/src/posix/bsp/: generic_linux.rs  mod.rs
osal-rs/src/posix/sys/: clock.rs  condvar.rs  mod.rs  mutex.rs  thread.rs
osal-rs/src/traits/: byte.rs  event_group.rs  mutex.rs  queue.rs  semaphore.rs  str.rs  system.rs  thread.rs  tick.rs  timer.rs
osal-rs/tests/: std_api_surface.rs
src/: commons.rs  error.rs  freertos.rs  lib.rs  mutex.rs  posix.rs  queue.rs  semaphore.rs  thread.rs  time.rs  timer.rs  traits.rs  types.rs
src/freertos/: constants.rs  event.rs  ffi.rs  free_rtos_allocator.rs  mutex.rs  queue.rs  semaphore.rs  stream_buffer.rs  system.rs  thread.rs  time.rs
src/mutex/: freertos.rs  posix.rs
src/posix/: event.rs  mutex.rs  posix_allocator.rs  queue.rs  semaphore.rs  stream_buffer.rs  system.rs  thread.rs  time.rs  timer.rs
src/queue/: freertos.rs  posix.rs
src/semaphore/: freertos.rs  posix.rs
src/thread/: freertos.rs  posix.rs
src/timer/: freertos.rs  posix.rs
src/traits/: event.rs  mutex.rs  queue.rs  semaphore.rs  stream_buffer.rs  thread.rs  thread_priority.rs  timer.rs
tests/: posix_thread_tests.rs  test_support.rs
