[package]
name = "osal-rs"
version = "0.2.0"
edition = "2024"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
description = "Operating System Abstraction Layer in Rust with FreeRTOS kernel POSIX"
license = "GPL-3"

[dependencies]

[build-dependencies]
cmake = "0.1"
bindgen = "0.72"
cc = "1.2.47"

[features]
default = ["freertos"]
freertos = []
posix = []
std = []

[lib]
name = "osal_rs"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[example]]
name = "posix_ticks_test"
required-features = ["std", "posix"]

[[example]]
name = "posix_pthread_test"
required-features = ["std", "posix"]

[[example]]
name = "basic"
required-features = ["std", "posix"]

[[test]]
name = "posix_thread_tests"
required-features = ["std", "posix"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
# Tests need std for unwinding panics
panic = "unwind"
