[workspace]
resolver = "3"
members = [
    "osal-rs",
    "osal-rs-build",
    "osal-rs-tests",
    "osal-rs-serde",
    "osal-rs-serde/derive",
]

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
panic = "abort"