[package]
name = "osal-rs-tests"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Salsi"]
description = "Test suite for osal-rs"
license = "GPL-3.0"
repository = "https://github.com/antoniosalsi/osal-rs"
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["freertos"]
freertos = ["osal-rs/freertos"]

[dependencies]
osal-rs = { version = "0.1.0", path = "../osal-rs" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"