[package]
name = "osal-rs"
version = "0.1.2"
edition = "2024"
rust-version = "1.85.0"
authors = ["Antonio Salsi"]
description = "Operating System Abstraction Layer for Rust with support for FreeRTOS and POSIX"
license = "GPL-3.0"
repository = "https://github.com/HiHappyGarden/osal-rs"
homepage = "https://github.com/HiHappyGarden/osal-rs"
documentation = "https://docs.rs/osal-rs"
readme = "../README.md"
keywords = ["os", "rtos", "freertos", "embedded", "posix"]
categories = ["embedded", "no-std", "os"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    "*.swp",
    "*.swo",
]

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["freertos"]
freertos = []
posix = []
std = ["disable_panic"]
disable_panic = []

[build-dependencies]
osal-rs-build = { version = "0.1.0", path = "../osal-rs-build" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"